// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseDetails snapshots snapshots: renders as expected with default props 1`] = `""`;

exports[`LicenseDetails snapshots snapshots: renders as expected with level set to block and license set to Creative Commons 1`] = `
<div
  className="border-primary-100 border-top pb-3"
>
  <Form.Group>
    <Form.Label
      className="mt-3"
    >
      <FormattedMessage
        defaultMessage="License Details"
        description="Title for license detatils subsection"
        id="authoring.videoeditor.license.detailsSubsection.title"
      />
    </Form.Label>
    <Stack
      gap={3}
    >
      <Card>
        <Card.Header
          actions={
            <Form.Checkbox
              checked={true}
              disabled={true}
            />
          }
          title={
            <div
              className="d-flex flex-row flex-nowrap"
            >
              <Icon />
              <FormattedMessage
                defaultMessage="Attribution"
                description="Label for attribution checkbox"
                id="authoring.videoeditor.license.attributionCheckboxLabel"
              />
            </div>
          }
        />
        <Card.Section>
          <FormattedMessage
            defaultMessage="Allow others to copy, distribute, display and perform your copyrighted work but only if they give credit the way you request. Currently, this option is required."
            description="Attribution card section defining attribution license"
            id="authoring.videoeditor.license.attributionSectionDescription"
          />
        </Card.Section>
      </Card>
      <Card
        isClickable={true}
        onClick={[Function]}
      >
        <Card.Header
          actions={
            <Form.Checkbox
              disabled={false}
              onChange={[Function]}
            />
          }
          title={
            <div
              className="d-flex flex-row flex-row"
            >
              <Icon />
              <FormattedMessage
                defaultMessage="Noncommercial"
                description="Label for noncommercial checkbox"
                id="authoring.videoeditor.license.noncommercialCheckboxLabel"
              />
            </div>
          }
        />
        <Card.Section>
          <FormattedMessage
            defaultMessage="Allow others to copy, distribute, display and perform your work - and derivative works based upon it - but for noncommercial purposes only."
            description="Noncommercial card section defining noncommercial license"
            id="authoring.videoeditor.license.noncommercialSectionDescription"
          />
        </Card.Section>
      </Card>
      <Card
        isClickable={true}
        onClick={[Function]}
      >
        <Card.Header
          actions={
            <Form.Checkbox
              disabled={false}
              onChange={[Function]}
            />
          }
          title={
            <div
              className="d-flex flex-row flex-row"
            >
              <Icon />
              <FormattedMessage
                defaultMessage="No Derivatives"
                description="Label for No Derivatives checkbox"
                id="authoring.videoeditor.license.noDerivativesCheckboxLabel"
              />
            </div>
          }
        />
        <Card.Section>
          <FormattedMessage
            defaultMessage="Allow others to copy, distribute, display and perform only verbatim copies of your work, not derivative works based upon it. This option is incompatible with \\"Share Alike\\"."
            description="No Derivatives card section defining no derivatives license"
            id="authoring.videoeditor.license.noDerivativesSectionDescription"
          />
        </Card.Section>
      </Card>
      <Card
        isClickable={true}
        onClick={[Function]}
      >
        <Card.Header
          actions={
            <Form.Checkbox
              disabled={false}
              onChange={[Function]}
            />
          }
          title={
            <div
              className="d-flex flex-row flex-row"
            >
              <Icon />
              <FormattedMessage
                defaultMessage="Share Alike"
                description="Label for Share Alike checkbox"
                id="authoring.videoeditor.license.shareAlikeCheckboxLabel"
              />
            </div>
          }
        />
        <Card.Section>
          <FormattedMessage
            defaultMessage="Allow others to distribute derivative works only under a license identical to the license that governs your work. This option is incompatible with \\"No Derivatives\\"."
            description="Share Alike card section defining no derivatives license"
            id="authoring.videoeditor.license.shareAlikeSectionDescription"
          />
        </Card.Section>
      </Card>
    </Stack>
  </Form.Group>
</div>
`;

exports[`LicenseDetails snapshots snapshots: renders as expected with level set to block and license set to all rights reserved 1`] = `
<div
  className="border-primary-100 border-top pb-3"
>
  <Form.Group>
    <Form.Label
      className="mt-3"
    >
      <FormattedMessage
        defaultMessage="License Details"
        description="Title for license detatils subsection"
        id="authoring.videoeditor.license.detailsSubsection.title"
      />
    </Form.Label>
    <Form.Text>
      <FormattedMessage
        defaultMessage="You reserve all rights for your work."
        description="All Rights Reserved section message"
        id="authoring.videoeditor.license.allRightsReservedSectionMessage"
      />
    </Form.Text>
  </Form.Group>
</div>
`;

exports[`LicenseDetails snapshots snapshots: renders as expected with level set to block and license set to select 1`] = `""`;

exports[`LicenseDetails snapshots snapshots: renders as expected with level set to library 1`] = `
<div
  className="border-primary-100 border-top pb-3"
>
  <Form.Group>
    <Form.Label
      className="mt-3"
    >
      <FormattedMessage
        defaultMessage="License Details"
        description="Title for license detatils subsection"
        id="authoring.videoeditor.license.detailsSubsection.title"
      />
    </Form.Label>
  </Form.Group>
</div>
`;
